<resources>
    <string name="app_name">Bottom Nav Test</string>
    <string name="title_today">Today</string>
    <string name="title_classes">Classes</string>
    <string name="title_events">School Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_class_title">Create New Class</string>
    <string name="new_event_title">Create New Event</string>
    <string name="create_new_class">Create New Class</string>
    <string name="set_class_name">Set/Class Name</string>
    <string name="save">Save</string>
    <string name="room_hint">Room</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_text">Event Text</string>
    <string name="edit_button_content_description">pencil</string>
    <string name="plus_button_content_description">Add class</string>
    <string name="view_class_fragment_title">View Class</string>
    <string name="delete_class">Delete Class</string>
    <string name="teacher_planner">Teacher Planner</string>
    <string name="to_do_type">To-Do Type</string>
    <string name="due_date">Due Date</string>
    <string name="no_to_do_s_for_this_class">No To-Do\'s for this class!</string>
    <string name="no_events">No Upcoming Events!</string>
    <string name="notification_channel_id">WELLBEING_NOTIFICATION</string>
    <string name="notification_title"></string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_haze">&#xf0b6;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_sleet">&#xf0b2;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_day_windy">&#xf085;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_day_cloudy_high">&#xf07d;</string>
    <string name="wi_day_light_wind">&#xf0c4;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_alt_cloudy">&#xf086;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_sleet">&#xf0b4;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_partly_cloudy">&#xf083;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_sleet">&#xf0b3;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_night_alt_cloudy_high">&#xf07e;</string>
    <string name="wi_night_cloudy_high">&#xf080;</string>
    <string name="wi_night_alt_partly_cloudy">&#xf081;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_sleet">&#xf0b5;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_raindrops">&#xf04e;</string>
    <string name="wi_raindrop">&#xf078;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sandstorm">&#xf082;</string>
    <string name="wi_earthquake">&#xf0c6;</string>
    <string name="wi_fire">&#xf0c7;</string>
    <string name="wi_flood">&#xf07c;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_tsunami">&#xf0c5;</string>
    <string name="wi_volcano">&#xf0c8;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_small_craft_advisory">&#xf0cc;</string>
    <string name="wi_gale_warning">&#xf0cd;</string>
    <string name="wi_storm_warning">&#xf0ce;</string>
    <string name="wi_hurricane_warning">&#xf0cf;</string>
    <string name="wi_wind_direction">&#xf0b1;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_moonrise">&#xf0c9;</string>
    <string name="wi_moonset">&#xf0ca;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_umbrella">&#xf084;</string>
    <string name="wi_barometer">&#xf079;</string>
    <string name="wi_humidity">&#xf07a;</string>
    <string name="wi_na">&#xf07b;</string>
    <string name="wi_train">&#xf0cb;</string>
    <string name="wi_moon_new">&#xf095;</string>
    <string name="wi_moon_waxing_crescent_1">&#xf096;</string>
    <string name="wi_moon_waxing_crescent_2">&#xf097;</string>
    <string name="wi_moon_waxing_crescent_3">&#xf098;</string>
    <string name="wi_moon_waxing_crescent_4">&#xf099;</string>
    <string name="wi_moon_waxing_crescent_5">&#xf09a;</string>
    <string name="wi_moon_waxing_crescent_6">&#xf09b;</string>
    <string name="wi_moon_first_quarter">&#xf09c;</string>
    <string name="wi_moon_waxing_gibbous_1">&#xf09d;</string>
    <string name="wi_moon_waxing_gibbous_2">&#xf09e;</string>
    <string name="wi_moon_waxing_gibbous_3">&#xf09f;</string>
    <string name="wi_moon_waxing_gibbous_4">&#xf0a0;</string>
    <string name="wi_moon_waxing_gibbous_5">&#xf0a1;</string>
    <string name="wi_moon_waxing_gibbous_6">&#xf0a2;</string>
    <string name="wi_moon_full">&#xf0a3;</string>
    <string name="wi_moon_waning_gibbous_1">&#xf0a4;</string>
    <string name="wi_moon_waning_gibbous_2">&#xf0a5;</string>
    <string name="wi_moon_waning_gibbous_3">&#xf0a6;</string>
    <string name="wi_moon_waning_gibbous_4">&#xf0a7;</string>
    <string name="wi_moon_waning_gibbous_5">&#xf0a8;</string>
    <string name="wi_moon_waning_gibbous_6">&#xf0a9;</string>
    <string name="wi_moon_third_quarter">&#xf0aa;</string>
    <string name="wi_moon_waning_crescent_1">&#xf0ab;</string>
    <string name="wi_moon_waning_crescent_2">&#xf0ac;</string>
    <string name="wi_moon_waning_crescent_3">&#xf0ad;</string>
    <string name="wi_moon_waning_crescent_4">&#xf0ae;</string>
    <string name="wi_moon_waning_crescent_5">&#xf0af;</string>
    <string name="wi_moon_waning_crescent_6">&#xf0b0;</string>
    <string name="wi_moon_alt_new">&#xf0eb;</string>
    <string name="wi_moon_alt_waxing_crescent_1">&#xf0d0;</string>
    <string name="wi_moon_alt_waxing_crescent_2">&#xf0d1;</string>
    <string name="wi_moon_alt_waxing_crescent_3">&#xf0d2;</string>
    <string name="wi_moon_alt_waxing_crescent_4">&#xf0d3;</string>
    <string name="wi_moon_alt_waxing_crescent_5">&#xf0d4;</string>
    <string name="wi_moon_alt_waxing_crescent_6">&#xf0d5;</string>
    <string name="wi_moon_alt_first_quarter">&#xf0d6;</string>
    <string name="wi_moon_alt_waxing_gibbous_1">&#xf0d7;</string>
    <string name="wi_moon_alt_waxing_gibbous_2">&#xf0d8;</string>
    <string name="wi_moon_alt_waxing_gibbous_3">&#xf0d9;</string>
    <string name="wi_moon_alt_waxing_gibbous_4">&#xf0da;</string>
    <string name="wi_moon_alt_waxing_gibbous_5">&#xf0db;</string>
    <string name="wi_moon_alt_waxing_gibbous_6">&#xf0dc;</string>
    <string name="wi_moon_alt_full">&#xf0dd;</string>
    <string name="wi_moon_alt_waning_gibbous_1">&#xf0de;</string>
    <string name="wi_moon_alt_waning_gibbous_2">&#xf0df;</string>
    <string name="wi_moon_alt_waning_gibbous_3">&#xf0e0;</string>
    <string name="wi_moon_alt_waning_gibbous_4">&#xf0e1;</string>
    <string name="wi_moon_alt_waning_gibbous_5">&#xf0e2;</string>
    <string name="wi_moon_alt_waning_gibbous_6">&#xf0e3;</string>
    <string name="wi_moon_alt_third_quarter">&#xf0e4;</string>
    <string name="what_went_well">What Went Well?</string>
    <string name="what_could_be_improved">What Could Be Improved?</string>
    <string name="any_other_comments_or_notes">Any Other Comments or Notes?</string>
    <string name="set_name">Set Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="year_group">Year Group</string>
    <string name="room">Room</string>
    <string name="event_details">Event Details</string>
    <string name="score">Score</string>
</resources>